[gd_scene load_steps=10 format=3 uid="uid://dtdeaiid2rm1d"]

[ext_resource type="Script" path="res://UI/menu/inventory/level-up-cards/level-up-card-ui.gd" id="1_5vxlt"]
[ext_resource type="Theme" uid="uid://vmbewpbo8s0" path="res://assets/UI/themes/UI-elements/card.tres" id="1_cnr2t"]
[ext_resource type="Theme" uid="uid://ct6ax5ic4d7tk" path="res://assets/UI/themes/text/text-large.tres" id="3_qlvdi"]
[ext_resource type="Theme" uid="uid://csssnpr3oiscv" path="res://assets/UI/themes/text/text-small.tres" id="4_0el7q"]
[ext_resource type="Theme" uid="uid://b18tu8eqd6rjk" path="res://assets/UI/themes/text/text-small-highlight.tres" id="5_eir14"]
[ext_resource type="Theme" uid="uid://bdvxr5ol13qak" path="res://assets/UI/themes/text/text-regular.tres" id="6_1kcpi"]
[ext_resource type="Theme" uid="uid://lkf3mb4llx74" path="res://assets/UI/themes/text/text-large-highlight.tres" id="7_066y2"]
[ext_resource type="Theme" uid="uid://dq788m3px4i4p" path="res://assets/UI/themes/UI-elements/button-no-styling.tres" id="8_ucmda"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ympn"]

[node name="LevelUpCardUI" type="PanelContainer"]
custom_minimum_size = Vector2(350, 600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -309.0
offset_right = 175.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("1_cnr2t")
script = ExtResource("1_5vxlt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 45

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_qlvdi")
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_6ympn")

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
expand_mode = 2

[node name="Requirements" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer/Requirements"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_0el7q")
horizontal_alignment = 2

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/Requirements"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_vertical = 10
theme = ExtResource("5_eir14")
autowrap_mode = 2

[node name="Effect" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer/Effect"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
theme = ExtResource("6_1kcpi")
text = "
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/Effect"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("7_066y2")
horizontal_alignment = 1

[node name="Stats" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("8_ucmda")
flat = true

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
